--- a/index.html
+++ b/index.html
@@ -347,7 +347,7 @@
             <div class="filters">
                 <div class="filter-grid">
                     <div class="filter-item">
-                        <label for="yearFilter">📅 Select Year</label>
+                        <label for="yearFilter">📅 Select Year(not your batch year)</label>
                         <select id="yearFilter" onchange="updateMonths()">
                             <option value="">-- Choose Year --</option>
                             <option value="2024">2024</option>
@@ -418,15 +418,9 @@
                 data: {
                     'January': {
                         theory: [
-                            { id: 'dQw4w9WgXcQ', title: 'Physics - Motion & Forces', duration: '45:00' },
-                            { id: 'dQw4w9WgXcQ', title: 'Chemistry Bonding', duration: '40:00' }
+                            { id: 'kRTz3OEem8c', title: '2026 Theory jan 1st session', duration: '1:44:04' },
+                            { id: 'nVCdRF50E-A', title: '2026 Theory jan 3rd session', duration: '1:39:04' }
                         ],
-                        revision: [
-                            { id: 'dQw4w9WgXcQ', title: 'Science Revision', duration: '32:00' }
-                        ],
-                        paper: [
-                            { id: 'dQw4w9WgXcQ', title: '2024 Paper Solutions', duration: '60:00' }
-                        ]
                     }
                 }
             },
