--- a/index.html
+++ b/index.html
@@ -385,30 +385,31 @@
             2024: {
                 months: 8,
                 data: {
-                    'January': {
+                    'June': {
                         theory: [
-                            { id: 'dQw4w9WgXcQ', title: 'Introduction to Mathematics', duration: '45:00' },
-                            { id: 'dQw4w9WgXcQ', title: 'Basic Algebra Concepts', duration: '38:20' },
-                            { id: 'dQw4w9WgXcQ', title: 'Geometry Fundamentals', duration: '42:15' }
+                            { id: 'zQ-3Enra76M', title: '026 Theory June 4th session (2024.06.23)', duration: '45:00' },
+                            { id: 'xZec9xC_AuY', title: '2026 Theory June 4th session (2024.06.30)', duration: '38:20' },
+                            { id: 'x_pLuOKvF4k', title: '2026 Theory June 4th session (2024.06.29', duration: '42:15' },
+                            { id: 'i5A9-UwQuM4', title: '2026 Theory June 1st session (2024.07.07)', duration: '42:15' }
                         ],
                         revision: [
-                            { id: 'dQw4w9WgXcQ', title: 'Math Revision Week 1', duration: '30:00' },
-                            { id: 'dQw4w9WgXcQ', title: 'Quick Review Session', duration: '25:30' }
+                            { id: '', title: 'No Video', duration: '0' },
+                            { id: '', title: 'No Video', duration: '0' }
                         ],
                         paper: [
-                            { id: 'dQw4w9WgXcQ', title: 'Past Paper 2023 - Part 1', duration: '50:00' }
+                            { id: '', title: 'No Video', duration: '0:00' }
                         ]
                     },
-                    'February': {
+                    'July': {
                         theory: [
-                            { id: 'dQw4w9WgXcQ', title: 'Advanced Calculus', duration: '48:00' },
-                            { id: 'dQw4w9WgXcQ', title: 'Trigonometry Basics', duration: '40:00' }
+                            { id: 'jxZ0Eb_PexU', title: '2026 Theory July 3rd session (2024.07.21)', duration: '48:00' },
+                            { id: 'cv0Pr2Vpq7w', title: '2026 Theory July 4th session  (2024.07.28)', duration: '40:00' }
                         ],
                         revision: [
-                            { id: 'dQw4w9WgXcQ', title: 'February Revision', duration: '35:00' }
+                            { id: '', title: 'No Video', duration: '0:00' }
                         ],
                         paper: [
-                            { id: 'dQw4w9WgXcQ', title: 'Model Paper Discussion', duration: '55:00' }
+                            { id: '', title: 'No Video', duration: '0:00' }
                         ]
                     }
                 }
@@ -429,13 +430,13 @@
                 data: {
                     'January': {
                         theory: [
-                            { id: 'dQw4w9WgXcQ', title: 'Biology Cell Structure', duration: '43:00' }
+                            { id: '', title: 'Pending Video', duration: '0:00' }
                         ],
                         revision: [
-                            { id: 'dQw4w9WgXcQ', title: 'Bio Quick Revision', duration: '28:00' }
+                            { id: 'dQw4w9WgXcQ', title: 'Pending Video', duration: '0:00' }
                         ],
                         paper: [
-                            { id: 'dQw4w9WgXcQ', title: 'Practice Paper 1', duration: '52:00' }
+                            { id: 'dQw4w9WgXcQ', title: 'Pending Video', duration: '0:00' }
                         ]
                     }
                 }
