--- a/index.html
+++ b/index.html
@@ -392,28 +392,11 @@
                             { id: 'x_pLuOKvF4k', title: '2026 Theory June 4th session (2024.06.29', duration: '42:15' },
                             { id: 'i5A9-UwQuM4', title: '2026 Theory June 1st session (2024.07.07)', duration: '42:15' }
                         ],
-                        revision: [
-                            { id: '', title: 'No Video', duration: '0' },
-                            { id: '', title: 'No Video', duration: '0' }
-                        ],
-                        paper: [
-                            { id: '', title: 'No Video', duration: '0:00' }
-                        ]
-                    },
                     'July': {
                         theory: [
                             { id: 'jxZ0Eb_PexU', title: '2026 Theory July 3rd session (2024.07.21)', duration: '48:00' },
                             { id: 'cv0Pr2Vpq7w', title: '2026 Theory July 4th session  (2024.07.28)', duration: '40:00' }
                         ],
-                        revision: [
-                            { id: '', title: 'No Video', duration: '0:00' }
-                        ],
-                        paper: [
-                            { id: '', title: 'No Video', duration: '0:00' }
-                        ]
-                    }
-                }
-            },
             2025: {
                 months: 12,
                 data: {
@@ -430,7 +413,7 @@
                 data: {
                     'January': {
                         theory: [
-                            { id: '', title: 'Pending Video', duration: '0:00' }
+                            { id: 'cv0Pr2Vpq7w', title: 'Pending Video', duration: '0:00' }
                         ],
                         revision: [
                             { id: 'dQw4w9WgXcQ', title: 'Pending Video', duration: '0:00' }
