--- a/index.html
+++ b/index.html
@@ -383,17 +383,17 @@
         // Sample video data structure
         const videoData = {
             2024: {
-                months: 8,
+                months: 12,
                 data: {
                     'June': {
                         theory: [
-                            { id: 'zQ-3Enra76M', title: '026 Theory June 4th session (2024.06.23)', duration: '45:00' },
-                            { id: 'xZec9xC_AuY', title: '2026 Theory June 4th session (2024.06.30)', duration: '38:20' },
-                            { id: 'x_pLuOKvF4k', title: '2026 Theory June 4th session (2024.06.29', duration: '42:15' },
-                            { id: 'i5A9-UwQuM4', title: '2026 Theory June 1st session (2024.07.07)', duration: '42:15' }
+                            { id: 'zQ-3Enra76M', title: '026 Theory June 1th session (2024.06.23)', duration: '2 Hr' },
+                            { id: 'xZec9xC_AuY', title: '2026 Theory June 2nd session (2024.06.30)', duration: '38:20' },
+                            { id: 'x_pLuOKvF4k', title: '2026 Theory June 3rd session (2024.06.29', duration: '42:15' }
                         ],
                     'July': {
                         theory: [
+                            { id: 'i5A9-UwQuM4', title: '2026 Theory June 1st session (2024.07.07)', duration: '42:15' },
                             { id: 'jxZ0Eb_PexU', title: '2026 Theory July 3rd session (2024.07.21)', duration: '48:00' },
                             { id: 'cv0Pr2Vpq7w', title: '2026 Theory July 4th session  (2024.07.28)', duration: '40:00' }
                         ],
