--- a/index.html
+++ b/index.html
@@ -387,7 +387,7 @@
                 data: {
                     'June': {
                         theory: [
-                            { id: 'zQ-3Enra76M', title: '026 Theory June 1th session (2024.06.23)', duration: '2 Hr' },
+                            { id: 'zQ-3Enra76M', title: '026 Theory June 1th session (2024.06.23)', duration: '38:20' },
                             { id: 'xZec9xC_AuY', title: '2026 Theory June 2nd session (2024.06.30)', duration: '38:20' },
                             { id: 'x_pLuOKvF4k', title: '2026 Theory June 3rd session (2024.06.29', duration: '42:15' }
                         ],
