--- a/index.html
+++ b/index.html
@@ -347,7 +347,7 @@
             <div class="filters">
                 <div class="filter-grid">
                     <div class="filter-item">
-                        <label for="yearFilter">📅 Select Year(not your batch year)</label>
+                        <label for="yearFilter">📅 Select Year (not your batch year)</label>
                         <select id="yearFilter" onchange="updateMonths()">
                             <option value="">-- Choose Year --</option>
                             <option value="2024">2024</option>
@@ -380,31 +380,35 @@
     </div>
 
     <script>
-        // Sample video data structure
+        // Sample video data structure - FIXED
         const videoData = {
             2024: {
-                months: 8,
+                months: 7,
                 data: {
                     'June': {
                         theory: [
-                            { id: 'zQ-3Enra76M', title: '026 Theory June 1th session (2024.06.23)', duration: '38:20' },
+                            { id: 'zQ-3Enra76M', title: '026 Theory June 1st session (2024.06.23)', duration: '38:20' },
                             { id: 'xZec9xC_AuY', title: '2026 Theory June 2nd session (2024.06.30)', duration: '38:20' },
-                            { id: 'x_pLuOKvF4k', title: '2026 Theory June 3rd session (2024.06.29', duration: '42:15' }
-                        ],
+                            { id: 'x_pLuOKvF4k', title: '2026 Theory June 3rd session (2024.06.29)', duration: '42:15' }
+                        ]
+                    },
                     'July': {
                         theory: [
-                            { id: 'i5A9-UwQuM4', title: '2026 Theory June 1st session (2024.07.07)', duration: '42:15' },
+                            { id: 'i5A9-UwQuM4', title: '2026 Theory July 1st session (2024.07.07)', duration: '42:15' },
                             { id: 'jxZ0Eb_PexU', title: '2026 Theory July 3rd session (2024.07.21)', duration: '48:00' },
-                            { id: 'cv0Pr2Vpq7w', title: '2026 Theory July 4th session  (2024.07.28)', duration: '40:00' }
-                        ],
+                            { id: 'cv0Pr2Vpq7w', title: '2026 Theory July 4th session (2024.07.28)', duration: '40:00' }
+                        ]
+                    }
+                }
+            },
             2025: {
                 months: 12,
                 data: {
                     'January': {
                         theory: [
-                            { id: 'kRTz3OEem8c', title: '2026 Theory jan 1st session', duration: '1:44:04' },
-                            { id: 'nVCdRF50E-A', title: '2026 Theory jan 3rd session', duration: '1:39:04' }
-                        ],
+                            { id: 'kRTz3OEem8c', title: '2026 Theory Jan 1st session', duration: '1:44:04' },
+                            { id: 'nVCdRF50E-A', title: '2026 Theory Jan 3rd session', duration: '1:39:04' }
+                        ]
                     }
                 }
             },
