--- a/index.html
+++ b/index.html
@@ -398,7 +398,49 @@
                             { id: 'jxZ0Eb_PexU', title: '2026 Theory July 3rd session (2024.07.21)', duration: '48:00' },
                             { id: 'cv0Pr2Vpq7w', title: '2026 Theory July 4th session (2024.07.28)', duration: '40:00' }
                         ]
-                    }
+                    },
+                    'August': {
+                        theory: [
+                            { id: 'd6GTUdqyCos', title: '2026 Theory Aug 2nd session (2024.08.11)', duration: '42:15' },
+                            { id: 'fdgEV8KREqA', title: '2026 Theory (2024.08.14)', duration: '48:00' },
+                            { id: 'QRulyiNnK_o', title: '2026 theory (2024.08.25)', duration: '40:00' }
+                        ]
+                    },
+                    'September': {
+                        theory: [
+                            { id: 'QRulyiNnK_o', title: '2026 theory (01.09.2024', duration: '42:15' },
+                            { id: 'L7EdAgi04Yo', title: '2026 Theory 2024/09/15', duration: '48:00' },
+                            { id: 'BDX9qHa7azM', title: '2026 Theory 2024/09/08 part 1', duration: '40:00' },
+                            { id: 'l-mz5XnJPrY', title: '2026 Theory 2024/09/08 Part 2', duration: '48:00' },
+                            { id: 'mb0cdRIeWWU', title: '2026 Theory 2024 09 28', duration: '48:00' },
+                            { id: 'l_y2Gi0f_b8', title: '2026 Theory 2024 09 29', duration: '48:00' }
+                        ]
+                    },
+                    'October': {
+                        theory: [
+                            { id: 'B-BCCenBUkQ', title: '2026 Theory 2024 10 06', duration: '42:15' },
+                            { id: 'rZQ19B1a4sQ', title: '2026 Theory 2024 10 20', duration: '48:00' },
+                            { id: 'H5SAlWQFZD8', title: '2026 theory 2024 10 27', duration: '40:00' }
+                        ]
+                    },
+                    'November': {
+                        theory: [
+                            { id: '2yY6c3UBBrw', title: '2026 November first session 2024 11 03', duration: '42:15' },
+                            { id: 'UoaI0lF75q0', title: '2026 Theory 2024 11 10', duration: '48:00' },
+                            { id: 'Pb37vik7qno', title: '2026 theory 2024 11 17', duration: '40:00' },
+                            { id: '7OWus7w7fOY', title: '2026 theory 2026 11 24', duration: '40:00' }
+                        ]
+                    },
+                    'December': {
+                        theory: [
+                            { id: 'SQOBBh2ypr0', title: '2026 theory dec 1st session', duration: '42:15' },
+                            { id: 'bmirf0fSxw0', title: '2026 Theory dec 2nd session', duration: '48:00' },
+                            { id: '-cT6ZdEiW3A', title: '2026 theory (2024.08.25)', duration: '40:00' }
+                        ]
+                    },
+                     revision: [
+                            { id: 'w1tDSQuERS0', title: '2026 Theory special class 2nd session', duration: '0:00' }
+                        ]
                 }
             },
             2025: {
